...

        LottieAnimation(
            composition,
            progress,
            modifier = Modifier.size(200.dp, 200.dp)
                .semantics {
                           testTag = "logo"
                },

        )
        composableScope.launch {
            delay(1200)
            logoState = LogoPosition.Finish
...
                                    onClick = {
                                        viewModel.onEvent(UiEvent.NavigatePhoneNumberUi)

                                    },
                                    modifier = Modifier.size(200.dp, 50.dp)
                                        .semantics {
                                            testTag = "login button"
                                        }
                                ) {
                                    Text(text = "Login")
                                }
                            }

...
                                        ),
                                        singleLine = true,
                                        keyboardOptions = KeyboardOptions(
                                            keyboardType = KeyboardType.Phone
                                        ),
                                        modifier = Modifier.semantics {
                                            testTag = "input phone number"
                                        }
                                    )


                                }

...
                                            enter = fadeIn(),
                                            exit = fadeOut()
                                        ) {
                                            Button(
                                                modifier = Modifier.size(200.dp, 50.dp)
                                                    .semantics {
                                                               testTag  = "next button"
                                                    },
                                                onClick = {

                                                    if (viewModel.phoneNumber.value.length < 10) {

                                                        viewModel.onEvent(
...
                                                keyboardType = KeyboardType.Number
                                            ),
                                            colors = TextFieldDefaults.textFieldColors(
                                                backgroundColor = Color.Transparent,
                                            ),
                                            modifier = Modifier.semantics {
                                                testTag = "input otp"
                                            }

                                        )
                                    }

                                    Spacer(modifier = Modifier.height(12.dp))
...
